--- a/src/Categories/CategorieStyling/CategoriesStyling.scss
+++ b/src/Categories/CategorieStyling/CategoriesStyling.scss
@@ -13,14 +13,14 @@
 
 .productImage {
     margin: auto;
-  display: block;
+    display: block;
     height: 400px;
     background-repeat: no-repeat;
     background-size: contain;
 }
 
 .productPrice {
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -30,14 +30,14 @@
 }
 
 .productName{
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 300;  
     color: #1D1F22;
 }
 
 .categoryName{
-font-family: Raleway;
+font-family: 'Raleway', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 42px;
@@ -48,10 +48,20 @@ color: #1D1F22;
 }
 
 .categoryPage{
-    padding: 40px;
+    padding-left: 41px;
+    padding-right: 41px;
 }
 
 .productFrame__icon {
+    background-color: #5ECE7B;
+    color: white;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    padding: 5px;
+    position: relative;
+    left: 75%;
+    top: 400px;
     display: none;
 }
 
