--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -26,6 +26,7 @@
 
     &__icon2 {
         position: absolute;
+        margin-top: 5px;
         margin-left: 73%;
         color: #000000;
         font-size: 20px;
