--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -22,6 +22,7 @@
         margin-left: 30%;
         color: #5ECE7B;
         font-size: 32px;
+        
     }
 
     &__icon2 {
@@ -30,7 +31,34 @@
         margin-left: 73%;
         color: #000000;
         font-size: 20px;
+        &__length{
+            position: relative;
+            left: 10px;
+            bottom: 33px;
+            width: 16px;
+            line-height: 16px;
+            border-radius: 50%;
+            text-align: center;
+            font-size: 10px;
+            background: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
+            text-align: center;
+            // font: 10px Arial, sans-serif;
+        }
     }
+}
+
+.productFrame__icon {
+    background-color: #5ECE7B;
+    color: white;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    padding: 5px;
+    position: relative;
+    left: 75%;
+    top: 400px;
+    display: none;
 }
 
 
