styling product description page

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -15,6 +15,11 @@
             text-decoration-color: #5ECE7B;
             color: #5ECE7B;
         }
+        // &:checked{
+        //     text-decoration: underline;
+        //     text-decoration-color: #5ECE7B;
+        //     color: #c51717;
+        // }
     }
 
     &__icon {
