--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,8 +1,8 @@
 .navBar {
     margin-top: 20px; 
     margin-left: 25px;      
-    list-style-type: none;
-    overflow: hidden;
+    // list-style-type: none;
+    // overflow: hidden;
     
     &__Category {
         font-family: 'Raleway', sans-serif;
