--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -51,8 +51,7 @@
 
         &__buttons {
             text-align: center;
-            margin-left: 80px;
-            margin-top: 20%;
+            margin-top: 95%;
             line-height: 60px;
             &__button {
                 height: 40px;
@@ -61,11 +60,18 @@
             }
         }
 
+        &__container {
+            width: 300px;
+        }
+
         &__image {
+            display:block;
             position: relative;
-            margin-top: 15%;
-            // display: block;
+            margin-top: 10%;
+            margin-left: auto;
+            margin-right: auto;
             height: 200px;
+            
         }
     }
 }
