--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -20,7 +20,7 @@
         margin-left: 30%;
         color: #5ECE7B;
         font-size: 32px;
-        
+
     }
 
     &__icon2 {
@@ -91,7 +91,6 @@
 
         &__buttons {
             text-align: center;
-            // margin-top: 70%;
             line-height: 45px;
             &__button {
                 height: 20px;
@@ -133,7 +132,7 @@
         line-height: 120%;
         text-transform: uppercase;
     }
-    &__check {
+    &__checkOut {
         background-color: rgba(94, 206, 123, 1);
         color: rgb(255, 255, 255);
         margin-left: 5%;
