--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,6 +1,9 @@
 .navBar {
-    margin-top: 20px; 
-    margin-left: 25px;      
+    position: relative;
+    width: 100%;
+    // margin-top: 20px; 
+    // margin-left: 25px;  
+    display:inline-flex;
 
     &__Category {
         font-family: 'Raleway', sans-serif;
@@ -16,26 +19,36 @@
     }
 
     &__switcher {
+        position: relative;
+        margin-left: 70vw;
+        margin-top: 5px;
         text-align: center;
-        font-size: 15px;
-        position: absolute;
-        border: none;
+        // font-size: 15px;
+        // border: none;
         width: 75px;
-        height: 15px;
+        // color: rgb(201, 0, 0);
+        // background-color: rgb(56, 0, 211);
+        // border-color: blue;
+        // border: 6px solid transparent;
+        // border-color: #fff transparent transparent transparent;
+       
     }
 
     &__icon {
         position: absolute;
-        margin-left: 30%;
+        margin-left: 50%;
+        margin-right: 50%;
+        // margin: auto;
+        // margin-right: 50vw;
+        // margin-left: 50vw;
         color: #5ECE7B;
         font-size: 32px;
 
     }
 
     &__icon2 {
-        position: absolute;
-        margin-top: 5px;
-        margin-left: 73%;
+        position: relative;
+        margin-top: 15px;
         color: #000000;
         font-size: 20px;
         text-decoration: none;
@@ -57,6 +70,8 @@
         &:hover &__cartOverlay{
             transform: translate(-85%);
             display: block; 
+            // content: attr(title);
+            position: absolute;
         }
     }
 }
