--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -2,7 +2,8 @@
     position: relative;
     width: 100%;
     // margin-top: 20px; 
-    // margin-left: 25px;  
+    // margin-left: 25px; 
+    background-color: white; 
     display:inline-flex;
 
     &__Category {
@@ -23,24 +24,13 @@
         margin-left: 70vw;
         margin-top: 5px;
         text-align: center;
-        // font-size: 15px;
-        // border: none;
         width: 75px;
-        // color: rgb(201, 0, 0);
-        // background-color: rgb(56, 0, 211);
-        // border-color: blue;
-        // border: 6px solid transparent;
-        // border-color: #fff transparent transparent transparent;
-       
     }
 
     &__icon {
         position: absolute;
         margin-left: 50%;
         margin-right: 50%;
-        // margin: auto;
-        // margin-right: 50vw;
-        // margin-left: 50vw;
         color: #5ECE7B;
         font-size: 32px;
 
@@ -70,21 +60,26 @@
         &:hover &__cartOverlay{
             transform: translate(-85%);
             display: block; 
-            // content: attr(title);
             position: absolute;
-            
         }
-        &:hover &.App{
-            display: none;         
+        &:hover &__backdrop{
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 65px;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0,0,0,0.5);
+            z-index: 5;
         }
     }
 }
 
-
 .navBar__icon2__cartOverlay {
     background-color: rgb(255, 255, 255);
     display: none;
-    z-index: 99;
+    z-index: 97;
 }
 
 .cartNav{
@@ -160,6 +155,8 @@
         font-size: 12px;
         line-height: 120%;
         text-transform: uppercase;
+        width: 100px;
+
     }
     &__checkOut {
         background-color: rgba(94, 206, 123, 1);
@@ -172,6 +169,7 @@
         font-size: 12px;
         line-height: 120%;
         text-transform: uppercase;
+        width: 100px;
     }
 }
 
