sorting items by out of stock parameter

--- a/src/Categories/CategorieStyling/CategoriesStyling.scss
+++ b/src/Categories/CategorieStyling/CategoriesStyling.scss
@@ -16,6 +16,24 @@
     height: 400px;
     background-repeat: no-repeat;
     background-size: contain;
+    &__outOfStock{
+        margin: auto;
+        display: block;
+        height: 400px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        opacity: 0.4;
+    }
+    &__text{
+        // position: absolute;
+        bottom: 220px;
+        left: 29%;
+        position: relative;
+        font-family: raleway;
+        font-weight: 400;
+        font-size: 24px;
+        color: rgba(141, 143, 154, 1);
+    }
 }
 
 .productPrice {
