--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -24,7 +24,7 @@
 
     &__firstSection {
         display: block;
-        margin-top: 15%;
+        margin-top: 10%;
 
         &__productName {
             font-family: 'Raleway';
@@ -41,6 +41,25 @@
             line-height: 28px;
             text-align: left;
             color: #1D1F22;
+        }
+
+        &__productAttributes {
+            position: relative;
+        }
+
+        &__value {
+            display: inline-block;
+            margin-bottom: 5px;
+            margin-right: 10px;
+            width: 63px;
+            height: 45px;
+            background-color: white;
+            &:hover{
+                background-color: rgba(29, 31, 34, 1);
+            }
+            &:focus{
+                background-color: rgba(29, 31, 34, 1);
+            }
         }
     }
 
