--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -89,7 +89,7 @@
     &__firstSection {
         display: block;
         margin-left: 10%;
-        margin-top: 50%;
+        margin-top: 20%;
 
         &__productName {
             font-family: 'Raleway';
@@ -134,8 +134,7 @@
             margin-left: auto;
             margin-right: auto;
             // margin-left: 30px;
-            height: 120px;
-            
+            height: 100px;
         }
     }
 }
@@ -144,6 +143,7 @@
     display: grid;
     grid-template-columns: auto auto;
     margin-top: 15px;
+    width: 250px;
     &__view {
         border: solid 1px, color rgba(29, 31, 34, 1);
         margin-left: 10%;
@@ -207,4 +207,15 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 25px;
+}
+
+.navBar__firstSection__value{
+    display: inline-block;
+    margin-bottom: 2px;
+    // margin-right: 5px;
+    width: 30px;
+    height: 20px;
+    background-color: white;
+    font-size: 8px;
+    text-align: center;
 }
