--- a/src/Components/ProductDescription/ProductDescription.scss
+++ b/src/Components/ProductDescription/ProductDescription.scss
@@ -23,8 +23,9 @@
         position: relative;
         margin: auto;
         margin-top: 0;
-        height: 400px;
+        height: 350px;
         opacity: 1;
+        max-width: 350px;
     }
 
     &__description{
